--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,6 +17,7 @@ jobs:
             - name: Build
               run: |
                   npm install
+                  npm run build
                   npm install -g firebase-tools
             - name: deploy to Firebase Hosting
               run: |
