--- a/package.json
+++ b/package.json
@@ -13,9 +13,17 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.14.0",
     "@supabase/supabase-js": "^2.47.12",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.9",
+    "next-themes": "^0.4.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.3",
@@ -37,6 +45,7 @@
     "jsdom": "^26.0.0",
     "prop-types": "^15.8.1",
     "vite": "^6.0.5",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^2.1.8"
   }
 }
